# homebudget

./: .gitignore  README.md  pyproject.toml
configs/: categories.yaml
